# SafeSpace

./: .gitignore  README.md  build_faiss_index.py  frontend.py  pyproject.toml
backend/: ai_agent.py  main.py  merge_lora.py  tools.py  train_llama3_exams.py
data/: mental_health_exams.jsonl
embeddings/: exam_faiss.index  exam_meta.json  exam_texts.npy
