[project]
name = "safespace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.2",
    "ollama>=0.6.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "twilio>=9.8.5",
    "uvicorn>=0.38.0",
]
